Refactor: Securizacion aplicacion